--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
   "dependencies": {
     "@deepgram/sdk": "^2.4.0",
     "axios": "^1.6.1",
+    "body-parser": "^1.20.2",
     "express": "^4.18.2",
     "multer": "^1.4.5-lts.1",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "recordrtc": "^5.6.2"
   }
 }
