--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@deepgram/sdk": "^2.4.0",
     "axios": "^1.6.1",
     "body-parser": "^1.20.2",
+    "diff": "^5.1.0",
     "express": "^4.18.2",
     "multer": "^1.4.5-lts.1",
     "path": "^0.12.7",
